--- a/React-WebApp/src/index.css
+++ b/React-WebApp/src/index.css
@@ -14,3 +14,6 @@
  footer {
     @apply px-4 md:px-6 py-3 bg-slate-600 text-white items-center;
  }
+ .todo-btn {
+    @apply p-1 bg-gray-100 rounded-sm text-gray-500 hover:bg-gray-200;
+ }
